# batch-rename

./: .gitignore  Cargo.toml  README.md
src/: main.rs  param_parser.rs
